Integrated image upload API in UI.

--- a/app/index.html
+++ b/app/index.html
@@ -78,8 +78,8 @@
                 <div id="previewContainer" class="mt-3"></div>
             </div>
             <div class="text-center">
-                <button id="uploadBtn" class="btn btn-primary" disabled></button>
-                <div id="uploadStatus" class="mt-3"></div>
+                <button id="uploadBtn" class="btn btn-primary" type="button" disabled></button>
+                <p id="uploadStatus" class="mt-3"></p>
             </div>
         </div>
     </section>
@@ -95,9 +95,6 @@
                 <div class="col-md-6">
                     <h4 class="mb-6" id="footerLinksTitle"></h4>
                     <ul class="list-unstyled" id="footerLinks">
-                        <li class="mb-2"><a href="#" class="text-white" onclick="triggerPageAlert()">Home</a></li>
-                        <li class="mb-2"><a href="#" class="text-white" onclick="triggerPageAlert()">Cool Features</a></li>
-                        <li class="mb-2"><a href="#" class="text-white" onclick="triggerPageAlert()">Very Cool Features</a></li>
                     </ul>
                 </div>
             </div>
